# amplifier-bundle-digital-twin-universe

./: AGENTS.md  README.md  pyproject.toml
docs/: amplifier-dtu-architecture.dot  amplifier-user-sim-launch-flow.dot  api-reference.md  development.md  manual_verification.md  profiles.md
profiles/: amplifier-user-sim-single-module.yaml  amplifier-user-sim.yaml  productivity-app.yaml
src/amplifier_bundle_digital_twin_universe/: cli.py  engine.py  incus.py  profile.py
tests/: conftest.py  helpers.py  interactive.py  test_e2e.py  test_e2e_amplifier_user_sim.py  test_e2e_amplifier_user_sim_single_module.py  test_e2e_pypi.py  test_lifecycle.py
